// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BAN CivPanels render correctly 1`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Aztecs",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/aztecs-left.apng",
        "animated_right": "/images/units-animated/aztecs-right.apng",
        "emblem": "/images/civemblems/aztecs.png",
        "unit": "/images/civs/aztecs.png",
      },
      "name": "Aztecs",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 2`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Berbers",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/berbers-left.apng",
        "animated_right": "/images/units-animated/berbers-right.apng",
        "emblem": "/images/civemblems/berbers.png",
        "unit": "/images/civs/berbers.png",
      },
      "name": "Berbers",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 3`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Britons",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/britons-left.apng",
        "animated_right": "/images/units-animated/britons-right.apng",
        "emblem": "/images/civemblems/britons.png",
        "unit": "/images/civs/britons.png",
      },
      "name": "Britons",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 4`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Burmese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/burmese-left.apng",
        "animated_right": "/images/units-animated/burmese-right.apng",
        "emblem": "/images/civemblems/burmese.png",
        "unit": "/images/civs/burmese.png",
      },
      "name": "Burmese",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 5`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Byzantines",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/byzantines-left.apng",
        "animated_right": "/images/units-animated/byzantines-right.apng",
        "emblem": "/images/civemblems/byzantines.png",
        "unit": "/images/civs/byzantines.png",
      },
      "name": "Byzantines",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 6`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Celts",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/celts-left.apng",
        "animated_right": "/images/units-animated/celts-right.apng",
        "emblem": "/images/civemblems/celts.png",
        "unit": "/images/civs/celts.png",
      },
      "name": "Celts",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 7`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Chinese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/chinese-left.apng",
        "animated_right": "/images/units-animated/chinese-right.apng",
        "emblem": "/images/civemblems/chinese.png",
        "unit": "/images/civs/chinese.png",
      },
      "name": "Chinese",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 8`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Ethiopians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/ethiopians-left.apng",
        "animated_right": "/images/units-animated/ethiopians-right.apng",
        "emblem": "/images/civemblems/ethiopians.png",
        "unit": "/images/civs/ethiopians.png",
      },
      "name": "Ethiopians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 9`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Franks",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/franks-left.apng",
        "animated_right": "/images/units-animated/franks-right.apng",
        "emblem": "/images/civemblems/franks.png",
        "unit": "/images/civs/franks.png",
      },
      "name": "Franks",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 10`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Goths",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/goths-left.apng",
        "animated_right": "/images/units-animated/goths-right.apng",
        "emblem": "/images/civemblems/goths.png",
        "unit": "/images/civs/goths.png",
      },
      "name": "Goths",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 11`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Huns",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/huns-left.apng",
        "animated_right": "/images/units-animated/huns-right.apng",
        "emblem": "/images/civemblems/huns.png",
        "unit": "/images/civs/huns.png",
      },
      "name": "Huns",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 12`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Incas",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/incas-left.apng",
        "animated_right": "/images/units-animated/incas-right.apng",
        "emblem": "/images/civemblems/incas.png",
        "unit": "/images/civs/incas.png",
      },
      "name": "Incas",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 13`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Indians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/indians-left.apng",
        "animated_right": "/images/units-animated/indians-right.apng",
        "emblem": "/images/civemblems/indians.png",
        "unit": "/images/civs/indians.png",
      },
      "name": "Indians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 14`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Italians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/italians-left.apng",
        "animated_right": "/images/units-animated/italians-right.apng",
        "emblem": "/images/civemblems/italians.png",
        "unit": "/images/civs/italians.png",
      },
      "name": "Italians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 15`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Japanese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/japanese-left.apng",
        "animated_right": "/images/units-animated/japanese-right.apng",
        "emblem": "/images/civemblems/japanese.png",
        "unit": "/images/civs/japanese.png",
      },
      "name": "Japanese",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 16`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Khmer",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/khmer-left.apng",
        "animated_right": "/images/units-animated/khmer-right.apng",
        "emblem": "/images/civemblems/khmer.png",
        "unit": "/images/civs/khmer.png",
      },
      "name": "Khmer",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 17`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Koreans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/koreans-left.apng",
        "animated_right": "/images/units-animated/koreans-right.apng",
        "emblem": "/images/civemblems/koreans.png",
        "unit": "/images/civs/koreans.png",
      },
      "name": "Koreans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 18`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Magyars",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/magyars-left.apng",
        "animated_right": "/images/units-animated/magyars-right.apng",
        "emblem": "/images/civemblems/magyars.png",
        "unit": "/images/civs/magyars.png",
      },
      "name": "Magyars",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 19`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Malay",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/malay-left.apng",
        "animated_right": "/images/units-animated/malay-right.apng",
        "emblem": "/images/civemblems/malay.png",
        "unit": "/images/civs/malay.png",
      },
      "name": "Malay",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 20`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Malians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/malians-left.apng",
        "animated_right": "/images/units-animated/malians-right.apng",
        "emblem": "/images/civemblems/malians.png",
        "unit": "/images/civs/malians.png",
      },
      "name": "Malians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 21`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Mayans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/mayans-left.apng",
        "animated_right": "/images/units-animated/mayans-right.apng",
        "emblem": "/images/civemblems/mayans.png",
        "unit": "/images/civs/mayans.png",
      },
      "name": "Mayans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 22`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Mongols",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/mongols-left.apng",
        "animated_right": "/images/units-animated/mongols-right.apng",
        "emblem": "/images/civemblems/mongols.png",
        "unit": "/images/civs/mongols.png",
      },
      "name": "Mongols",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 23`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Persians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/persians-left.apng",
        "animated_right": "/images/units-animated/persians-right.apng",
        "emblem": "/images/civemblems/persians.png",
        "unit": "/images/civs/persians.png",
      },
      "name": "Persians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 24`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Portuguese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/portuguese-left.apng",
        "animated_right": "/images/units-animated/portuguese-right.apng",
        "emblem": "/images/civemblems/portuguese.png",
        "unit": "/images/civs/portuguese.png",
      },
      "name": "Portuguese",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 25`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Saracens",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/saracens-left.apng",
        "animated_right": "/images/units-animated/saracens-right.apng",
        "emblem": "/images/civemblems/saracens.png",
        "unit": "/images/civs/saracens.png",
      },
      "name": "Saracens",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 26`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Slavs",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/slavs-left.apng",
        "animated_right": "/images/units-animated/slavs-right.apng",
        "emblem": "/images/civemblems/slavs.png",
        "unit": "/images/civs/slavs.png",
      },
      "name": "Slavs",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 27`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Spanish",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/spanish-left.apng",
        "animated_right": "/images/units-animated/spanish-right.apng",
        "emblem": "/images/civemblems/spanish.png",
        "unit": "/images/civs/spanish.png",
      },
      "name": "Spanish",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 28`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Teutons",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/teutons-left.apng",
        "animated_right": "/images/units-animated/teutons-right.apng",
        "emblem": "/images/civemblems/teutons.png",
        "unit": "/images/civs/teutons.png",
      },
      "name": "Teutons",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 29`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Turks",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/turks-left.apng",
        "animated_right": "/images/units-animated/turks-right.apng",
        "emblem": "/images/civemblems/turks.png",
        "unit": "/images/civs/turks.png",
      },
      "name": "Turks",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 30`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Vietnamese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/vietnamese-left.apng",
        "animated_right": "/images/units-animated/vietnamese-right.apng",
        "emblem": "/images/civemblems/vietnamese.png",
        "unit": "/images/civs/vietnamese.png",
      },
      "name": "Vietnamese",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 31`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Vikings",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/vikings-left.apng",
        "animated_right": "/images/units-animated/vikings-right.apng",
        "emblem": "/images/civemblems/vikings.png",
        "unit": "/images/civs/vikings.png",
      },
      "name": "Vikings",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 32`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Bulgarians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bulgarians-left.apng",
        "animated_right": "/images/units-animated/bulgarians-right.apng",
        "emblem": "/images/civemblems/bulgarians.png",
        "unit": "/images/civs/bulgarians.png",
      },
      "name": "Bulgarians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 33`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Cumans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/cumans-left.apng",
        "animated_right": "/images/units-animated/cumans-right.apng",
        "emblem": "/images/civemblems/cumans.png",
        "unit": "/images/civs/cumans.png",
      },
      "name": "Cumans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 34`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Lithuanians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/lithuanians-left.apng",
        "animated_right": "/images/units-animated/lithuanians-right.apng",
        "emblem": "/images/civemblems/lithuanians.png",
        "unit": "/images/civs/lithuanians.png",
      },
      "name": "Lithuanians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 35`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Tatars",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/tatars-left.apng",
        "animated_right": "/images/units-animated/tatars-right.apng",
        "emblem": "/images/civemblems/tatars.png",
        "unit": "/images/civs/tatars.png",
      },
      "name": "Tatars",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 36`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 7,
      "i18nPrefix": "civs.",
      "id": "Burgundians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/burgundians-left.apng",
        "animated_right": "/images/units-animated/burgundians-right.apng",
        "emblem": "/images/civemblems/burgundians.png",
        "unit": "/images/civs/burgundians.png",
      },
      "name": "Burgundians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 37`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 7,
      "i18nPrefix": "civs.",
      "id": "Sicilians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/sicilians-left.apng",
        "animated_right": "/images/units-animated/sicilians-right.apng",
        "emblem": "/images/civemblems/sicilians.png",
        "unit": "/images/civs/sicilians.png",
      },
      "name": "Sicilians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 38`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 8,
      "i18nPrefix": "civs.",
      "id": "Bohemians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bohemians-left.apng",
        "animated_right": "/images/units-animated/bohemians-right.apng",
        "emblem": "/images/civemblems/bohemians.png",
        "unit": "/images/civs/bohemians.png",
      },
      "name": "Bohemians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 39`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 8,
      "i18nPrefix": "civs.",
      "id": "Poles",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/poles-left.apng",
        "animated_right": "/images/units-animated/poles-right.apng",
        "emblem": "/images/civemblems/poles.png",
        "unit": "/images/civs/poles.png",
      },
      "name": "Poles",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 40`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Bengalis",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bengalis-left.apng",
        "animated_right": "/images/units-animated/bengalis-right.apng",
        "emblem": "/images/civemblems/bengalis.png",
        "unit": "/images/civs/bengalis.png",
      },
      "name": "Bengalis",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 41`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Dravidians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/dravidians-left.apng",
        "animated_right": "/images/units-animated/dravidians-right.apng",
        "emblem": "/images/civemblems/dravidians.png",
        "unit": "/images/civs/dravidians.png",
      },
      "name": "Dravidians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 42`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Gurjaras",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/gurjaras-left.apng",
        "animated_right": "/images/units-animated/gurjaras-right.apng",
        "emblem": "/images/civemblems/gurjaras.png",
        "unit": "/images/civs/gurjaras.png",
      },
      "name": "Gurjaras",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 43`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Hindustanis",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hindustanis-left.apng",
        "animated_right": "/images/units-animated/hindustanis-right.apng",
        "emblem": "/images/civemblems/hindustanis.png",
        "unit": "/images/civs/hindustanis.png",
      },
      "name": "Hindustanis",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 44`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 10,
      "i18nPrefix": "civs.",
      "id": "Romans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/romans-left.apng",
        "animated_right": "/images/units-animated/romans-right.apng",
        "emblem": "/images/civemblems/romans.png",
        "unit": "/images/civs/romans.png",
      },
      "name": "Romans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 45`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 11,
      "i18nPrefix": "civs.",
      "id": "Armenians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/armenians-left.apng",
        "animated_right": "/images/units-animated/armenians-right.apng",
        "emblem": "/images/civemblems/armenians.png",
        "unit": "/images/civs/armenians.png",
      },
      "name": "Armenians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 46`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 11,
      "i18nPrefix": "civs.",
      "id": "Georgians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/georgians-left.apng",
        "animated_right": "/images/units-animated/georgians-right.apng",
        "emblem": "/images/civemblems/georgians.png",
        "unit": "/images/civs/georgians.png",
      },
      "name": "Georgians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 47`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Achaemenids",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/achaemenids-left.apng",
        "animated_right": "/images/units-animated/achaemenids-right.apng",
        "emblem": "/images/civemblems/achaemenids.png",
        "unit": "/images/civs/achaemenids.png",
      },
      "name": "Achaemenids",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 48`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Athenians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/athenians-left.apng",
        "animated_right": "/images/units-animated/athenians-right.apng",
        "emblem": "/images/civemblems/athenians.png",
        "unit": "/images/civs/athenians.png",
      },
      "name": "Athenians",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 49`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Spartans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/spartans-left.apng",
        "animated_right": "/images/units-animated/spartans-right.apng",
        "emblem": "/images/civemblems/spartans.png",
        "unit": "/images/civs/spartans.png",
      },
      "name": "Spartans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 50`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Shu",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/shu-left.apng",
        "animated_right": "/images/units-animated/shu-right.apng",
        "emblem": "/images/civemblems/shu.png",
        "unit": "/images/civs/shu.png",
      },
      "name": "Shu",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 51`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Wu",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/wu-left.apng",
        "animated_right": "/images/units-animated/wu-right.apng",
        "emblem": "/images/civemblems/wu.png",
        "unit": "/images/civs/wu.png",
      },
      "name": "Wu",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 52`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Wei",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/wei-left.apng",
        "animated_right": "/images/units-animated/wei-right.apng",
        "emblem": "/images/civemblems/wei.png",
        "unit": "/images/civs/wei.png",
      },
      "name": "Wei",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 53`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Jurchens",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/jurchens-left.apng",
        "animated_right": "/images/units-animated/jurchens-right.apng",
        "emblem": "/images/civemblems/jurchens.png",
        "unit": "/images/civs/jurchens.png",
      },
      "name": "Jurchens",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`BAN CivPanels render correctly 54`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Khitans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/khitans-left.apng",
        "animated_right": "/images/units-animated/khitans-right.apng",
        "emblem": "/images/civemblems/khitans.png",
        "unit": "/images/civs/khitans.png",
      },
      "name": "Khitans",
    }
  }
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 1`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Aztecs",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/aztecs-left.apng",
        "animated_right": "/images/units-animated/aztecs-right.apng",
        "emblem": "/images/civemblems/aztecs.png",
        "unit": "/images/civs/aztecs.png",
      },
      "name": "Aztecs",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 2`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Berbers",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/berbers-left.apng",
        "animated_right": "/images/units-animated/berbers-right.apng",
        "emblem": "/images/civemblems/berbers.png",
        "unit": "/images/civs/berbers.png",
      },
      "name": "Berbers",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 3`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Britons",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/britons-left.apng",
        "animated_right": "/images/units-animated/britons-right.apng",
        "emblem": "/images/civemblems/britons.png",
        "unit": "/images/civs/britons.png",
      },
      "name": "Britons",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 4`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Burmese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/burmese-left.apng",
        "animated_right": "/images/units-animated/burmese-right.apng",
        "emblem": "/images/civemblems/burmese.png",
        "unit": "/images/civs/burmese.png",
      },
      "name": "Burmese",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 5`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Byzantines",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/byzantines-left.apng",
        "animated_right": "/images/units-animated/byzantines-right.apng",
        "emblem": "/images/civemblems/byzantines.png",
        "unit": "/images/civs/byzantines.png",
      },
      "name": "Byzantines",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 6`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Celts",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/celts-left.apng",
        "animated_right": "/images/units-animated/celts-right.apng",
        "emblem": "/images/civemblems/celts.png",
        "unit": "/images/civs/celts.png",
      },
      "name": "Celts",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 7`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Chinese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/chinese-left.apng",
        "animated_right": "/images/units-animated/chinese-right.apng",
        "emblem": "/images/civemblems/chinese.png",
        "unit": "/images/civs/chinese.png",
      },
      "name": "Chinese",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 8`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Ethiopians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/ethiopians-left.apng",
        "animated_right": "/images/units-animated/ethiopians-right.apng",
        "emblem": "/images/civemblems/ethiopians.png",
        "unit": "/images/civs/ethiopians.png",
      },
      "name": "Ethiopians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 9`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Franks",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/franks-left.apng",
        "animated_right": "/images/units-animated/franks-right.apng",
        "emblem": "/images/civemblems/franks.png",
        "unit": "/images/civs/franks.png",
      },
      "name": "Franks",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 10`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Goths",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/goths-left.apng",
        "animated_right": "/images/units-animated/goths-right.apng",
        "emblem": "/images/civemblems/goths.png",
        "unit": "/images/civs/goths.png",
      },
      "name": "Goths",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 11`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Huns",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/huns-left.apng",
        "animated_right": "/images/units-animated/huns-right.apng",
        "emblem": "/images/civemblems/huns.png",
        "unit": "/images/civs/huns.png",
      },
      "name": "Huns",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 12`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Incas",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/incas-left.apng",
        "animated_right": "/images/units-animated/incas-right.apng",
        "emblem": "/images/civemblems/incas.png",
        "unit": "/images/civs/incas.png",
      },
      "name": "Incas",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 13`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Indians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/indians-left.apng",
        "animated_right": "/images/units-animated/indians-right.apng",
        "emblem": "/images/civemblems/indians.png",
        "unit": "/images/civs/indians.png",
      },
      "name": "Indians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 14`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Italians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/italians-left.apng",
        "animated_right": "/images/units-animated/italians-right.apng",
        "emblem": "/images/civemblems/italians.png",
        "unit": "/images/civs/italians.png",
      },
      "name": "Italians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 15`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Japanese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/japanese-left.apng",
        "animated_right": "/images/units-animated/japanese-right.apng",
        "emblem": "/images/civemblems/japanese.png",
        "unit": "/images/civs/japanese.png",
      },
      "name": "Japanese",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 16`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Khmer",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/khmer-left.apng",
        "animated_right": "/images/units-animated/khmer-right.apng",
        "emblem": "/images/civemblems/khmer.png",
        "unit": "/images/civs/khmer.png",
      },
      "name": "Khmer",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 17`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Koreans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/koreans-left.apng",
        "animated_right": "/images/units-animated/koreans-right.apng",
        "emblem": "/images/civemblems/koreans.png",
        "unit": "/images/civs/koreans.png",
      },
      "name": "Koreans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 18`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Magyars",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/magyars-left.apng",
        "animated_right": "/images/units-animated/magyars-right.apng",
        "emblem": "/images/civemblems/magyars.png",
        "unit": "/images/civs/magyars.png",
      },
      "name": "Magyars",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 19`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Malay",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/malay-left.apng",
        "animated_right": "/images/units-animated/malay-right.apng",
        "emblem": "/images/civemblems/malay.png",
        "unit": "/images/civs/malay.png",
      },
      "name": "Malay",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 20`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Malians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/malians-left.apng",
        "animated_right": "/images/units-animated/malians-right.apng",
        "emblem": "/images/civemblems/malians.png",
        "unit": "/images/civs/malians.png",
      },
      "name": "Malians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 21`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Mayans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/mayans-left.apng",
        "animated_right": "/images/units-animated/mayans-right.apng",
        "emblem": "/images/civemblems/mayans.png",
        "unit": "/images/civs/mayans.png",
      },
      "name": "Mayans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 22`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Mongols",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/mongols-left.apng",
        "animated_right": "/images/units-animated/mongols-right.apng",
        "emblem": "/images/civemblems/mongols.png",
        "unit": "/images/civs/mongols.png",
      },
      "name": "Mongols",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 23`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Persians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/persians-left.apng",
        "animated_right": "/images/units-animated/persians-right.apng",
        "emblem": "/images/civemblems/persians.png",
        "unit": "/images/civs/persians.png",
      },
      "name": "Persians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 24`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 4,
      "i18nPrefix": "civs.",
      "id": "Portuguese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/portuguese-left.apng",
        "animated_right": "/images/units-animated/portuguese-right.apng",
        "emblem": "/images/civemblems/portuguese.png",
        "unit": "/images/civs/portuguese.png",
      },
      "name": "Portuguese",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 25`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Saracens",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/saracens-left.apng",
        "animated_right": "/images/units-animated/saracens-right.apng",
        "emblem": "/images/civemblems/saracens.png",
        "unit": "/images/civs/saracens.png",
      },
      "name": "Saracens",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 26`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 3,
      "i18nPrefix": "civs.",
      "id": "Slavs",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/slavs-left.apng",
        "animated_right": "/images/units-animated/slavs-right.apng",
        "emblem": "/images/civemblems/slavs.png",
        "unit": "/images/civs/slavs.png",
      },
      "name": "Slavs",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 27`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 2,
      "i18nPrefix": "civs.",
      "id": "Spanish",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/spanish-left.apng",
        "animated_right": "/images/units-animated/spanish-right.apng",
        "emblem": "/images/civemblems/spanish.png",
        "unit": "/images/civs/spanish.png",
      },
      "name": "Spanish",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 28`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Teutons",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/teutons-left.apng",
        "animated_right": "/images/units-animated/teutons-right.apng",
        "emblem": "/images/civemblems/teutons.png",
        "unit": "/images/civs/teutons.png",
      },
      "name": "Teutons",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 29`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Turks",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/turks-left.apng",
        "animated_right": "/images/units-animated/turks-right.apng",
        "emblem": "/images/civemblems/turks.png",
        "unit": "/images/civs/turks.png",
      },
      "name": "Turks",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 30`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 5,
      "i18nPrefix": "civs.",
      "id": "Vietnamese",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/vietnamese-left.apng",
        "animated_right": "/images/units-animated/vietnamese-right.apng",
        "emblem": "/images/civemblems/vietnamese.png",
        "unit": "/images/civs/vietnamese.png",
      },
      "name": "Vietnamese",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 31`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 1,
      "i18nPrefix": "civs.",
      "id": "Vikings",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/vikings-left.apng",
        "animated_right": "/images/units-animated/vikings-right.apng",
        "emblem": "/images/civemblems/vikings.png",
        "unit": "/images/civs/vikings.png",
      },
      "name": "Vikings",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 32`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Bulgarians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bulgarians-left.apng",
        "animated_right": "/images/units-animated/bulgarians-right.apng",
        "emblem": "/images/civemblems/bulgarians.png",
        "unit": "/images/civs/bulgarians.png",
      },
      "name": "Bulgarians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 33`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Cumans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/cumans-left.apng",
        "animated_right": "/images/units-animated/cumans-right.apng",
        "emblem": "/images/civemblems/cumans.png",
        "unit": "/images/civs/cumans.png",
      },
      "name": "Cumans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 34`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Lithuanians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/lithuanians-left.apng",
        "animated_right": "/images/units-animated/lithuanians-right.apng",
        "emblem": "/images/civemblems/lithuanians.png",
        "unit": "/images/civs/lithuanians.png",
      },
      "name": "Lithuanians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 35`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 6,
      "i18nPrefix": "civs.",
      "id": "Tatars",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/tatars-left.apng",
        "animated_right": "/images/units-animated/tatars-right.apng",
        "emblem": "/images/civemblems/tatars.png",
        "unit": "/images/civs/tatars.png",
      },
      "name": "Tatars",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 36`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 7,
      "i18nPrefix": "civs.",
      "id": "Burgundians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/burgundians-left.apng",
        "animated_right": "/images/units-animated/burgundians-right.apng",
        "emblem": "/images/civemblems/burgundians.png",
        "unit": "/images/civs/burgundians.png",
      },
      "name": "Burgundians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 37`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 7,
      "i18nPrefix": "civs.",
      "id": "Sicilians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/sicilians-left.apng",
        "animated_right": "/images/units-animated/sicilians-right.apng",
        "emblem": "/images/civemblems/sicilians.png",
        "unit": "/images/civs/sicilians.png",
      },
      "name": "Sicilians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 38`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 8,
      "i18nPrefix": "civs.",
      "id": "Bohemians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bohemians-left.apng",
        "animated_right": "/images/units-animated/bohemians-right.apng",
        "emblem": "/images/civemblems/bohemians.png",
        "unit": "/images/civs/bohemians.png",
      },
      "name": "Bohemians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 39`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 8,
      "i18nPrefix": "civs.",
      "id": "Poles",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/poles-left.apng",
        "animated_right": "/images/units-animated/poles-right.apng",
        "emblem": "/images/civemblems/poles.png",
        "unit": "/images/civs/poles.png",
      },
      "name": "Poles",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 40`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Bengalis",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/bengalis-left.apng",
        "animated_right": "/images/units-animated/bengalis-right.apng",
        "emblem": "/images/civemblems/bengalis.png",
        "unit": "/images/civs/bengalis.png",
      },
      "name": "Bengalis",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 41`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Dravidians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/dravidians-left.apng",
        "animated_right": "/images/units-animated/dravidians-right.apng",
        "emblem": "/images/civemblems/dravidians.png",
        "unit": "/images/civs/dravidians.png",
      },
      "name": "Dravidians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 42`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Gurjaras",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/gurjaras-left.apng",
        "animated_right": "/images/units-animated/gurjaras-right.apng",
        "emblem": "/images/civemblems/gurjaras.png",
        "unit": "/images/civs/gurjaras.png",
      },
      "name": "Gurjaras",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 43`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 9,
      "i18nPrefix": "civs.",
      "id": "Hindustanis",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hindustanis-left.apng",
        "animated_right": "/images/units-animated/hindustanis-right.apng",
        "emblem": "/images/civemblems/hindustanis.png",
        "unit": "/images/civs/hindustanis.png",
      },
      "name": "Hindustanis",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 44`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 10,
      "i18nPrefix": "civs.",
      "id": "Romans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/romans-left.apng",
        "animated_right": "/images/units-animated/romans-right.apng",
        "emblem": "/images/civemblems/romans.png",
        "unit": "/images/civs/romans.png",
      },
      "name": "Romans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 45`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 11,
      "i18nPrefix": "civs.",
      "id": "Armenians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/armenians-left.apng",
        "animated_right": "/images/units-animated/armenians-right.apng",
        "emblem": "/images/civemblems/armenians.png",
        "unit": "/images/civs/armenians.png",
      },
      "name": "Armenians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 46`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 11,
      "i18nPrefix": "civs.",
      "id": "Georgians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/georgians-left.apng",
        "animated_right": "/images/units-animated/georgians-right.apng",
        "emblem": "/images/civemblems/georgians.png",
        "unit": "/images/civs/georgians.png",
      },
      "name": "Georgians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 47`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Achaemenids",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/achaemenids-left.apng",
        "animated_right": "/images/units-animated/achaemenids-right.apng",
        "emblem": "/images/civemblems/achaemenids.png",
        "unit": "/images/civs/achaemenids.png",
      },
      "name": "Achaemenids",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 48`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Athenians",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/athenians-left.apng",
        "animated_right": "/images/units-animated/athenians-right.apng",
        "emblem": "/images/civemblems/athenians.png",
        "unit": "/images/civs/athenians.png",
      },
      "name": "Athenians",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 49`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 12,
      "i18nPrefix": "civs.",
      "id": "Spartans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/spartans-left.apng",
        "animated_right": "/images/units-animated/spartans-right.apng",
        "emblem": "/images/civemblems/spartans.png",
        "unit": "/images/civs/spartans.png",
      },
      "name": "Spartans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 50`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Shu",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/shu-left.apng",
        "animated_right": "/images/units-animated/shu-right.apng",
        "emblem": "/images/civemblems/shu.png",
        "unit": "/images/civs/shu.png",
      },
      "name": "Shu",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 51`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Wu",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/wu-left.apng",
        "animated_right": "/images/units-animated/wu-right.apng",
        "emblem": "/images/civemblems/wu.png",
        "unit": "/images/civs/wu.png",
      },
      "name": "Wu",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 52`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Wei",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/wei-left.apng",
        "animated_right": "/images/units-animated/wei-right.apng",
        "emblem": "/images/civemblems/wei.png",
        "unit": "/images/civs/wei.png",
      },
      "name": "Wei",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 53`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Jurchens",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/jurchens-left.apng",
        "animated_right": "/images/units-animated/jurchens-right.apng",
        "emblem": "/images/civemblems/jurchens.png",
        "unit": "/images/civs/jurchens.png",
      },
      "name": "Jurchens",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`PICK CivPanels render correctly 54`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    Civilisation {
      "category": "default",
      "gameVersion": 13,
      "i18nPrefix": "civs.",
      "id": "Khitans",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/khitans-left.apng",
        "animated_right": "/images/units-animated/khitans-right.apng",
        "emblem": "/images/civemblems/khitans.png",
        "unit": "/images/civs/khitans.png",
      },
      "name": "Khitans",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`empty BAN CivPanel renders correctly 1`] = `
<DraftOptionPanel
  active={false}
  draftOptionPanelType="ban"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`empty PICK CivPanel renders correctly 1`] = `
<DraftOptionPanel
  active={false}
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`technical PICK DraftOptionPanels render correctly 1`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    DraftOption {
      "category": "default",
      "i18nPrefix": "civs.",
      "id": "HIDDEN_PICK",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hidden_pick-left.apng",
        "animated_right": "/images/units-animated/hidden_pick-right.apng",
        "emblem": "/images/civemblems/hidden_pick.png",
        "unit": "/images/civs/hidden_pick.png",
      },
      "name": "HIDDEN_PICK",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`technical PICK DraftOptionPanels render correctly 2`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    DraftOption {
      "category": "default",
      "i18nPrefix": "civs.",
      "id": "HIDDEN_BAN",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hidden_ban-left.apng",
        "animated_right": "/images/units-animated/hidden_ban-right.apng",
        "emblem": "/images/civemblems/hidden_ban.png",
        "unit": "/images/civs/hidden_ban.png",
      },
      "name": "HIDDEN_BAN",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`technical PICK DraftOptionPanels render correctly 3`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    DraftOption {
      "category": "default",
      "i18nPrefix": "civs.",
      "id": "HIDDEN_SNIPE",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hidden_snipe-left.apng",
        "animated_right": "/images/units-animated/hidden_snipe-right.apng",
        "emblem": "/images/civemblems/hidden_snipe.png",
        "unit": "/images/civs/hidden_snipe.png",
      },
      "name": "HIDDEN_SNIPE",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`technical PICK DraftOptionPanels render correctly 4`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    DraftOption {
      "category": "default",
      "i18nPrefix": "civs.",
      "id": "HIDDEN_STEAL",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hidden_steal-left.apng",
        "animated_right": "/images/units-animated/hidden_steal-right.apng",
        "emblem": "/images/civemblems/hidden_steal.png",
        "unit": "/images/civs/hidden_steal.png",
      },
      "name": "HIDDEN_STEAL",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;

exports[`technical PICK DraftOptionPanels render correctly 5`] = `
<DraftOptionPanel
  active={false}
  draftOption={
    DraftOption {
      "category": "default",
      "i18nPrefix": "civs.",
      "id": "HIDDEN",
      "imageUrls": Object {
        "animated_left": "/images/units-animated/hidden-left.apng",
        "animated_right": "/images/units-animated/hidden-right.apng",
        "emblem": "/images/civemblems/hidden.png",
        "unit": "/images/civs/hidden.png",
      },
      "name": "HIDDEN",
    }
  }
  draftOptionPanelType="pick"
  iconStyle="units"
  nextAction={0}
  t={[Function]}
/>
`;
